<resources>
    <string name="app_name">Trasem</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="helpItem">Ayuda</string>

    <!-- Describir cada elemento de IU splash screem-->
    <string name="trasemDescription">Traductor de señas mexicanas</string>

    <!-- Describir cada elemento de IU fragment_main-->
    <string name="imgVwAvatarUser">Avatar de usuario</string>
    <string name="imgVwIsotipo">Isotipo trasem</string>
    <string name="txtNickname">Nombre del usuario</string>
    <string name="txtStudy">Estudiar</string>
    <string name="txtConnect">Conectar</string>
    <string name="descr_overflow_button">Conectar</string>
    <string name="title_activity_help_tab">HelpTabActivity</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="lorem_ipsum">Lorem Ipsum</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="welcome">¡Bienvenido(a)!</string>
    <string name="meetApp">A continuación, conoce la aplicación:</string>
    <string name="close">Cerrar</string>
    <string name="skip">Omitir</string>
</resources>
