<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/fl_welcome_container"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.InstructionsHelpFragment">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:gravity="center|top"
        android:lineSpacingMultiplier="1.2"
        android:padding="16dp"
        android:text="@string/welcome"
        android:textColor="@color/aqua_green"
        android:textSize="26sp"
        android:textStyle="bold" />

    <ImageView
        android:id="@+id/iv_welcome_glove"
        android:layout_width="264dp"
        android:layout_height="347dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="95dp"
        android:layout_marginEnd="79dp"
        android:layout_marginRight="79dp"
        android:contentDescription="@string/trasemDescription"
        android:src="@drawable/glove_trasem" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="450dp"
        android:gravity="center"
        android:lineSpacingMultiplier="1.2"
        android:padding="16dp"
        android:text="@string/meetApp"
        android:textColor="@android:color/primary_text_light"
        android:textSize="14sp" />

    <Button
        style="?android:attr/borderlessButtonStyle"
        android:id="@+id/bt_welcome_skip"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@color/translucent"
        android:drawableStart="@drawable/ic_close_light"
        android:drawableLeft="@drawable/ic_close_light"
        android:textColor="@color/light_gray9d"
        android:layout_marginBottom="5dp"
        android:layout_marginLeft="8dp"
        android:layout_marginStart="8dp"
        android:text="@string/skip"
        android:textSize="16sp" />

</RelativeLayout >